# protein-design

./: .env.template  .gitignore  README.md  README_followups.md  explore_oas.py  pyproject.toml  requirements.txt  slurm-66161155.out
bash_scripts/: README.md  c05_then_ttt.sbatch  clean_d2.sbatch  common_setup.sh  count_sequences.sh  debug_run.sbatch  download_oas.sbatch  dpo_lowdata.sbatch  dpo_lowdata_sweep.sh  eval.sbatch  evotuning.sbatch  extract.sbatch  filter_oas.sbatch  mmseqs2.sbatch  plot_cdrh3_lengths.sbatch  plot_results.sbatch  prepare_oas.sbatch  probe.sbatch  run_dpo_first_epoch_spearman.sh  run_dpo_temperature_sweep.sh  run_dpo_train.sh  run_gibbs.sh  run_plot_dpo_metrics.sh  run_unlikelihood_alpha_sweep.sh  search_c05.sbatch  sweep_cdrmix.sh  sweep_cdrmix_35m.sh  sweep_evotuning_cdrmix.sh  test_esm.sh  train.sbatch  train_dpo.sbatch  ttt.sbatch  ttt_c05.sbatch  ttt_sweep.sbatch
conf/: config.yaml  dpo.yaml  workflow.yaml
configs/: evotuning_5k.yaml  evotuning_base.yaml  evotuning_c05_5k.yaml  evotuning_debug.yaml  evotuning_local.yaml  scoring.yaml  ttt_c05_single.yaml  ttt_c05_single_from_evotuned.yaml
memory/: MEMORY.md  project_beam_eval_plots.md
plots/: run_manifest.json  run_metrics_summary.csv
report/: PGLD.md  dataset.ipynb  evotuning.md  figures.ipynb  main.tex  project-proposal.md  report.tex  slides.md
scripts/: ed2_m22_eda.ipynb  eval.py  extract_c05_corpus.py  filter_oas.py  find_max_batch_size.py  gibbs_sampling.py  migrate_project_dir.sh  plot_cdrh3_lengths.py  plot_dpo_metrics.py  plot_results.py  pssm_sampling.py  random_sampling.py  recover_history.py  run_mmseqs2.sh  run_ttt_sweep.py  score_mutational_paths.py  search_c05.py  stochastic_beam_search.py  train.py  train_dpo.py  train_evotuning.py  train_lora_dpo.py  train_ttt.py  train_unlikelihood.py  train_workflow.py
slurm-outputs/: train_dpo-62626977.out  train_dpo-62639444.out  train_dpo-62888655.out  train_dpo-63383679.out
src/: dataset.py  eval.py  loss.py  model.py  utils.py  (+1 more)
(+290 files in other folders)
