[project]
name = "protein-design"
version = "0.1.0"
description = "ESM2 task-based training for antibody design"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "datasets",
    "biopython",
    "pandas",
    "wandb",
    "pyyaml",
    "tqdm",
    "python-dotenv",
    "numpy",
    "requests",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "umap-learn",
    "seaborn",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "peft>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protein_design"]

[dependency-groups]
dev = [
    "adjusttext>=1.4.0",
    "nbconvert>=7.17.1",
]
